crates/tabella/tests/snapshots/contract__verb_add_overwrite_applied.snap
---
source: crates/tabella/tests/contract.rs
expression: pretty(&applied)
---
{
  "body": "Rewritten.\n",
  "core": "tabella",
  "ext": "md",
  "home": "ecv",
  "slug": "trip_idea",
  "tags": [],
  "type": null
}
