crates/tabella/tests/snapshots/contract__verb_edit_frontmatter.snap
---
source: crates/tabella/tests/contract.rs
expression: pretty(&edited)
---
{
  "body": "Rome.\n",
  "core": "tabella",
  "ext": "md",
  "home": "ecv",
  "slug": "trip_idea",
  "tags": [
    "mores"
  ],
  "type": "principium"
}
