crates/tabella/tests/snapshots/contract__verb_rm.snap
---
source: crates/tabella/tests/contract.rs
expression: pretty(&removed)
---
{
  "deleted": "trip_idea"
}
